--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,7 @@ html {
 body {
     display: flex;
     flex-direction: column;
-}
-
-.container {
-    
+    margin: 0px;
 }
 
 .hero-section {
@@ -25,10 +22,8 @@ body {
     justify-content: flex-start;
     border-bottom-style: solid;
     border-bottom-width: 4px;
-    border-bottom-color: #69b9ff;
+    border-bottom-color: #192024;
     background-image: url("photos/thlbHeader.jpg"), linear-gradient(to bottom, rgba(46, 157, 255, 0.5), rgba(46, 157, 255, 0.22));
-    
-    background-position: top bottom;
     background-size: cover;
     text-align: center;
 }
@@ -54,7 +49,7 @@ body {
 }
 
 .text-background {
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(27, 70, 107, 0.22));
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(9, 20, 31, 0.4));
 }
 
 .button {
@@ -180,10 +175,18 @@ body {
   text-transform: uppercase;
 }
 
-.columns {
+.columns, .columns-container {
     display: flex;
     padding-right: 10px;
     padding-left: 10px;
+}
+
+.columns-container{
+    justify-content: space-between;
+}
+
+.columns{
+    flex: 1;
 }
 
 .box {
@@ -209,6 +212,7 @@ body {
     border-bottom-right-radius: 5px;
     background-color: white;
     text-align: center;
+    max-width: 500px;
 }
 
 .box-heading{
@@ -225,4 +229,51 @@ body {
     line-height: 30px;
     letter-spacing: 7px;
     text-transform: uppercase;
+    font-weight: 300;
+}
+
+.section-heading.accent{
+    color: white;
+    text-align: center;
+}
+
+.section-subheading.accent{
+    padding-bottom: 0px;
+    color: #e8e8e8;
+}
+
+.section.accent{
+    background-color: #192024;
+}
+
+.fullWidth-image{
+    display: inline-block;
+    margin-bottom: 20px;
+    max-width: 100%;
+    width: 500px;
+    height: 500px;
+    object-fit: cover;
+    mask-image: linear-gradient(to bottom, rgba(19,20,24,0.5) 0%,rgba(0,0,0,0.65) 100%);
+    -webkit-mask-image: linear-gradient(to bottom, rgba(19,20,24,0.9) 0%,rgba(0,0,0,0.77) 100%);
+}
+
+.white-text {
+    margin-bottom: 20px;
+    color: white;
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 30px;
+    text-align: center;
+}
+
+.white-text.heading {
+    font-size: 20px;
+    line-height: 30px;
+    letter-spacing: 7px;
+    text-transform: uppercase;
+}
+
+.box.transparent {
+    border-style: none;
+    background-color: transparent;
 }
