--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,10 @@ body {
     margin: 0px;
 }
 
+.container-block{
+    align-items: flex-start;
+}
+
 .hero-section {
     padding-top: 242px;
     padding-bottom: 242px;
@@ -23,7 +27,7 @@ body {
     border-bottom-style: solid;
     border-bottom-width: 4px;
     border-bottom-color: #192024;
-    background-image: url("photos/thlbHeader.jpg"), linear-gradient(to bottom, rgba(46, 157, 255, 0.5), rgba(46, 157, 255, 0.22));
+    background-image: url("photos/thlbHeader.jpg");
     background-size: cover;
     text-align: center;
 }
@@ -49,7 +53,7 @@ body {
 }
 
 .text-background {
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(9, 20, 31, 0.4));
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.8), rgba(9, 20, 31, 0.6));
 }
 
 .button {
